# Zync

./: .gitignore  DESIGN.md  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.module.css  App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/api/: jobsApi.ts  resumeApi.ts  settingsApi.ts
client/src/components/: NotificationBlockedBanner.module.css  NotificationBlockedBanner.tsx  NotificationCTA.module.css  (+3 more)
server/: .env.example  alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0001_initial_tables.py  0002_be04_scoring.py  0003_job_raw_content.py  0004_be06_application_fields.py  0005_be07_scan_settings.py  0006_be08_notified_at.py  0007_viewed_at.py  0008_canonical_job_id.py
server/app/: main.py  scheduler.py
server/app/api/: _job_pipeline_helpers.py  _resume_helpers.py  health.py  jobs.py  notifications.py  resumes.py  resumes_active.py  router.py  settings.py
server/app/core/: config.py  logging.py
server/app/db/: session.py
server/app/models/: __init__.py  application.py  job.py  resume.py  settings.py
server/app/schemas/: health.py  job.py  resume.py  settings.py  skeleton.py
server/app/scraper/: __init__.py  jobmaster.py
server/app/services/: blacklist_filter.py  duplicate_detection.py  file_storage.py  gemini_client.py  gemini_scoring.py  job_parser.py  job_pipeline.py  job_repository.py  job_scraper.py  json_extraction.py  notification_bus.py  ollama_client.py  resume_parser.py  score_cache.py  settings_store.py  system_advice.py  text_extraction.py  text_similarity.py
server/tests/: _job_pipeline.py  conftest.py  helpers.py  test_blacklist_filter.py  test_duplicate_detection.py  test_file_storage.py  test_gemini_client.py  test_job_parser.py  test_job_repository.py  test_job_scraper.py  test_jobmaster_scraper.py  test_jobs_api.py  test_jobs_pipeline.py  test_notification_pipeline.py  test_ollama_client.py  test_resume_delete_guard.py  test_resume_parser.py  test_resumes_api.py  test_scheduler.py  test_score_cache.py  test_settings_api.py  test_settings_scan_api.py  test_system_advice.py  test_text_extraction.py
(+69 files in other folders)
